crates/parser/tests/snapshots/block_string_empty.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-empty

## Input

```
key |
```

## CST

```
SOURCE_FILE@0..5
  ENTRY@0..5
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..5
      BLOCK_STRING_HEADER@4..5
        PIPE@4..5 "|"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [],
            },
        },
    ],
}
```

vim:ft=markdown
