crates/parser/tests/snapshots/block_string_empty_body.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-empty-body

## Input

```
key |

a b

```

## CST

```
SOURCE_FILE@0..11
  ENTRY@0..6
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..6
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
  NEWLINE@6..7 "\n"
  ENTRY@7..10
    WORD_KEY@7..8
      WORD@7..8 "a"
    SPACE@8..9 " "
    LINE_STRING@9..10
      STRING@9..10 "b"
  NEWLINE@10..11 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@7..8 "a",
            },
            value: LineString {
                string: STRING@9..10 "b",
            },
        },
    ],
}
```

vim:ft=markdown
