crates/parser/tests/snapshots/block_string_end_at_outer.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-end-at-outer

## Input

```
foo |
  line1
bar baz

```

## CST

```
SOURCE_FILE@0..22
  ENTRY@0..13
    WORD_KEY@0..3
      WORD@0..3 "foo"
    SPACE@3..4 " "
    BLOCK_STRING@4..13
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      LINE_STRING@8..13
        STRING@8..13 "line1"
  NEWLINE@13..14 "\n"
  ENTRY@14..21
    WORD_KEY@14..17
      WORD@14..17 "bar"
    SPACE@17..18 " "
    LINE_STRING@18..21
      STRING@18..21 "baz"
  NEWLINE@21..22 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "foo",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@8..13 "line1",
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@14..17 "bar",
            },
            value: LineString {
                string: STRING@18..21 "baz",
            },
        },
    ],
}
```

vim:ft=markdown
