crates/parser/tests/snapshots/block_string_eof_end.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-eof-end

## Input

```
key |
  content
```

## CST

```
SOURCE_FILE@0..15
  ENTRY@0..15
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..15
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      LINE_STRING@8..15
        STRING@8..15 "content"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    indent: none,
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@8..15 "content",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
