crates/parser/tests/snapshots/block_string_explicit_indent_empty_first.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-explicit-indent-empty-first

## Input

```
key |2

  content

```

## CST

```
SOURCE_FILE@0..18
  ENTRY@0..18
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..18
      BLOCK_STRING_HEADER@4..7
        PIPE@4..5 "|"
        NUMERAL@5..6 "2"
        NEWLINE@6..7 "\n"
      LINE_STRING@7..7
      NEWLINE@7..8 "\n"
      SPACE@8..10 "  "
      LINE_STRING@10..17
        STRING@10..17 "content"
      NEWLINE@17..18 "\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    indent: NUMERAL@5..6 "2",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@10..17 "content",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
