crates/parser/tests/snapshots/block_string_extra_indent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-extra-indent

## Input

```
foo |
  a
   b

```

## CST

```
SOURCE_FILE@0..15
  ENTRY@0..15
    WORD_KEY@0..3
      WORD@0..3 "foo"
    SPACE@3..4 " "
    BLOCK_STRING@4..14
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      LINE_STRING@8..9
        STRING@8..9 "a"
      NEWLINE@9..10 "\n"
      SPACE@10..12 "  "
      LINE_STRING@12..14
        STRING@12..14 " b"
    NEWLINE@14..15 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "foo",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@8..9 "a",
                    },
                    LineString {
                        string: STRING@12..14 " b",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
